Fix odd spacing under records with shorter record-wrapper height (#5064)

--- a/app/assets/stylesheets/components/record--sidebar.scss
+++ b/app/assets/stylesheets/components/record--sidebar.scss
@@ -12,6 +12,7 @@
 
 .documents-list .document .document-thumbnail {
     padding: 0;
+    margin: 0 .25rem;
 }
 
 .document-thumbnail {
